# Talk-to-Redshift-SB-remote

./: Dockerfile  README.md  pyproject.toml  railway.toml
redshift_mcp/: INSTRUCTIONS.md  __init__.py  __main__.py  oauth.py  server.py  tools.py
