[project]
name = "talk-to-redshift-mcp"
version = "1.0.0"
description = "Talk-to-Redshift MCP — read-only Redshift access for Claude"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["redshift_mcp*"]
